istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: web-api
spec:
  host: web-api
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: articles
spec:
  host: articles
  subsets:
  - name: v1
    labels:
      version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
spec:
  host: authors
  subsets:
  - name: v1
    labels:
      version: v1
---
