istio/fault-articles-500.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: articles
spec:
  hosts:
  - articles
  http:
  - route:
    - destination:
        host: articles
        subset: v1
    fault:
      abort:
        httpStatus: 500
        percent: 100
---
