istio/istio-service-web-api-v1-v2-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-api
spec:
  hosts:
  - web-api
  http:
  - route:
    - destination:
        host: web-api
        subset: v1
      weight: 25
    - destination:
        host: web-api
        subset: v2
      weight: 75
---
