istio/nofault-articles.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: articles
spec:
  hosts:
  - articles
  http:
  - route:
    - destination:
        host: articles
        subset: v1
---
