istio/nofault-authors.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
spec:
  hosts:
  - authors
  http:
  - route:
    - destination:
        host: authors
        subset: v1
---
