istio/template.k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: cloudnative-ingress
 namespace: istio-system
spec:
 rules:
 - host: cloudnative.<clustername>.<region>.containers.appdomain.cloud 
   http:
     paths:
     - path: /
       backend:
         serviceName: istio-ingressgateway
         servicePort: 80
